--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,23 +11,41 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".MovieListActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
+
+        </activity>
+        <!--<activity-->
+            <!--android:name=".DetailActivityFragment"-->
+            <!--android:label="@string/title_activity_detail_activity_fragment" >-->
+        <!--</activity>-->
+        <activity
+            android:name=".details.DetailActivity"
+            android:label="@string/title_activity_detail" >
+        </activity>
+        <activity
+            android:name=".reviews.ReviewActivity"
+            android:label="@string/title_activity_review" >
+        </activity>
+        <activity android:name=".trailers.TrailerActivity"
+            android:label="TrailerActivity">
+
         </activity>
 
         <activity
-            android:name=".DetailActivityFragment"
-            android:label="@string/title_activity_detail_activity_fragment" >
+            android:name=".BaseActivity"
+            android:label="@string/title_activity_base" >
         </activity>
-        <activity
-            android:name=".DetailActivity"
-            android:label="@string/title_activity_detail" >
-        </activity>
+
+        <provider
+            android:authorities="com.example.android.popularmovies"
+            android:name=".data.MovieContentProvider"/>
     </application>
 
 </manifest>
